monitor/kubernetes/elk/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: core-monitor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  -  host: "kibana.local.sz"
     http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: logs-kibana-cluster-kb-http
            port: 
              number: 5601
